[build-system]
requires = ['setuptools==68.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'metronomes'
version = '0.0.11'
authors = [
  { name='Evgeniy Blinov', email='zheni-b@yandex.ru' },
]
description = 'Endless tick-tock generators'
readme = 'README.md'
requires-python = '>=3.8'
dependencies = [
    'emptylog>=0.0.9',
    'cantok>=0.0.32',
    'escaping>=0.0.14',
    'locklib>=0.0.17',
    'typing_extensions ; python_version < "3.8"',
]
classifiers = [
    'Operating System :: OS Independent',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    'Typing :: Typed',
]
keywords = [
    'metronome',
    'task scheduling',
    'callbacks runner',
]

[tool.setuptools.package-data]
"metronomes" = ["py.typed"]

[tool.mutmut]
paths_to_mutate="metronomes"
runner="pytest"

[project.urls]
'Source' = 'https://github.com/pomponchik/metronomes'
'Tracker' = 'https://github.com/pomponchik/metronomes/issues'
